# forge

./: .gitignore  LICENSE  README.md  jest.config.cjs  jest.config.ts  package-lock.json  package.json  plan.md  plan_model_selection.md  pyproject.toml  tsconfig.json
Formula/: forge.rb
docs/: skills.md  ui-redesign.md
scripts/: claude-session-smoke.mjs
src/: autoSelector.ts  claudeCodeDriver.ts  claudeSession.ts  cli.ts  codexDriver.ts  config.ts  db.ts  externalAgents.ts  modelFetch.ts  modelsdev.ts  overseer.ts  promptLog.ts  router.ts  safety.ts  session.ts  stateMachine.ts  taskGraphValidation.ts
src-ts/: cli.ts  config.ts  db.ts  modelFetch.ts  overseer.ts  router.ts  session.ts
tests/: agentsSkillArgs.test.ts  agentsSkillContext.test.ts  autoSelector.test.ts  claudeCodeDriver.test.ts  claudeSdk.probe.test.ts  claudeSession.test.ts  claudeSessionManager.test.ts  cli.test.ts  codexDriver.test.ts  commandsClaude.test.ts  config.test.ts  conftest.py  db.test.ts  dbClaudeSessions.test.ts  e2e.test.ts  modelFetch.test.ts  overseer.test.ts  overseerSkills.test.ts  promptLog.test.ts  router.test.ts  safety.test.ts  session.test.ts  sessionSkillsConfig.test.ts  setupSkills.test.ts  skillsAudit.test.ts  skillsAuditRules.test.ts  skillsBundle.test.ts  skillsCli.test.ts  skillsCliOptions.test.ts  skillsContext.test.ts  skillsDiscovery.test.ts  skillsExternalAgentIntegration.test.ts  skillsFakeCli.test.ts  skillsFingerprints.test.ts  skillsInstall.test.ts  skillsIntegration.test.ts  skillsInventory.test.ts  skillsPaths.test.ts  skillsPipeline.test.ts  (+15 more)
(+124 files in other folders)
